# metric_spaces

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
data/: README.md
data/cifar-100/: README.md
datasets/: .gitignore
emd/: explore.ipynb  generate.py
exploration/: Pto-3D.ipynb  Untitled.ipynb  banach.py  candidate-sets.ipynb  centering-matrix-eigenvalues.ipynb  density-grid.ipynb  pivot_transform.ipynb  sqrt-on-metric.ipynb  z-normed-pseudometric.ipynb  z-normed-pseudometric.ju.py  z_normed_overflow.py  z_normed_pseudometric.py
exploration/quick-and-dirty/: Numeric-Test-Angles.ipynb
explore/emd/: explore.ipynb  generate.py
explore/exploration/: Pto-3D.ipynb  banach.py  candidate-sets.ipynb  centering-matrix-eigenvalues.ipynb  density-grid.ipynb  pivot_transform.ipynb  z-normed-pseudometric.ipynb  z_normed_overflow.py
explore/exploration/quick-and-dirty/: Numeric-Test-Angles.ipynb
explore/lonely_points/: lonely.py
explore/maths/intrinsic_dim/: instrinsic_dist_lognorm.ipynb  intrinsic_dim.ipynb  uniform.ipynb
explore/multivar_time_series/: explore_eyes_open_shut.ipynb
explore/multivar_time_series/data/eyesopenshut/: EyesOpenShut.txt
lib/: pyproject.toml
lib/meters/generate/: point_generator.py
lib/meters/metric/: fast_distance_matrix.py  metric.py
lib/meters/pivot_selection/: __init__.py  common.py  heuristics_fast.py  optimal.py
lib/meters/pivot_selection/old_hilbert_patitioning/: test_measure.py
lib/meters/tetrahedron/: __init__.py  proj_quality.py
lib/meters/tetrahedron/math/: two-triangles.ggb  what_makes_a_good_pivot.ipynb
lib/meters/tetrahedron/math/old/pivot_geometry/: pivot_plot_test.ipynb
lib/metrica/generate/: point_generator.py
lib/metrica/metric/: __init__.py  test_metric.py  transform.py
lib/metrica/pivot_selection/: __init__.py  lb_summation.py  test_IS.py
lib/metrica/tetrahedron/: test_proj_quality.py  test_tetrahedron.py
lib/metrica/tetrahedron/math/: lb2_max.nb  project_to_2d.ipynb  pto-permutations.ipynb  tetrahedron.nb
lib/tests/: test_packaging.py
lonely_points/: lonely.py
math/intrinsic_dim/: instrinsic_dim_Euclid.ipynb  instrinsic_dist_lognorm.ipynb  intrinsic_dim.ipynb
math/tetrahedron/: tetrahedron-2.ggb  tetrahedron-trig.ipynb  tetrahedron.ggb  tetrahedron.ipynb
maths/: random_sampling.py
maths/intrinsic_dim/: instrinsic_dim_Euclid.ipynb  uniform.ipynb
maths/tetrahedron/: create_paper_results.py  create_paper_visuals.ipynb  optimized-comparison.csv  performance_measurement.py  proj_quality.py  project_to_2d.ipynb  pto-permutations.ipynb  results_long.csv  test_tetrahedron.py  tetrahedron-2.ggb  tetrahedron-trig.ipynb  tetrahedron.ipynb  tetrahedron.nb  tetrahedron.py  tetrahedron2.nb  what_makes_a_good_pivot.ipynb
maths/tetrahedron/fig/: ccs.eps  partition.eps
maths/tetrahedron/pivot_selection/: common.py  heuristics_complete.py  heuristics_fast.py  optimal.py
metric/: fast_distance_matrix.py  generate.py  metric.py  plot.py
numerical/: metric_test.py
paper/IS-comparison/: indexability_by_pivot_choice.py
paper/ptolemy-permutation/: main.py
paper/supermetric-pivot-selection/: create_paper_results.py  create_paper_visuals.ipynb  create_paper_visuals.py  pyproject.toml  test_single.py  vis_datasets.py
paper/supermetric-pivot-selection/exploration/: partitioning_viz.py
paper/supermetric-pivot-selection/exploration/performance/: performance_tools.bash
paper/supermetric-pivot-selection/src/supermetric_pivot_selection/: __init__.py  benchmark.py  create_paper_results.py  create_paper_visuals.py  experiment.py  old_run_experiments.py  performance.py  run.py  run_missing_seeds.py  simplified_experiments.py  test_single.py  visualize_dataset_distributions.py  visuals.py
paper/supermetric-pivot-selection/src/supermetric_pivot_selection/dev/: benchmark.py  merge-tables.py  run_missing_seeds.py
paper/supermetric-pivot-selection/src/supermetric_pivot_selection/exploration/: visuals.py
paper_/IS-comparison/: indexability_by_pivot_choice.ipynb
paper_/indexability/: explore.ipynb  explore.py
paper_/supermetric-pivot-selection/: fig  main.py  pull_results.bash  pyproject.toml
piv_selection/hilbert_patitioning/: main.py  measure.py
pivot/: generate.py  metric.py  plot.py  pto.py  query.py  test_metric.py  transform.py
pivot_geometry/: pivot_plot_test.ipynb  tetrahedron_lb.ipynb
pivot_selection/: __init__.py  heuristics_complete.py  heuristics_fast.py  lb_summation.py  optimal.py  test_IS.py
pivot_selection/old_hilbert_patitioning/: main.py
tetrahedron/: __init__.py  performance_measurement.py  proj_quality.py  tetrahedron.py
tetrahedron/math/: project_to_2d.ipynb  pto-permutations.ipynb  tetrahedron-trig.ipynb  tetrahedron.html  tetrahedron.ipynb  what_makes_a_good_pivot.ipynb
tetrahedron/math/old/pivot_geometry/: pivot_plot_test.ipynb  tetrahedron_lb.ipynb
