[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metric"
version = "0.0.1"
description = "tools for working with metric spaces"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "none yet"}
authors = [
    { name = "Max Pernklau", email = "max.pernklau@fernuni-hagen.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
]

[project.urls]
"Homepage" = "https://github.com/DimensionalScoop/metric_spaces"


[tool.setuptools.packages.find]
where = ["."]
