[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metric"
version = "0.0.1"
description = "tools for working with metric spaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "none yet"}
authors = [
    { name = "Max Pernklau", email = "max.pernklau@fernuni-hagen.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "pandas>=2.2.3",
  "uncertainties>=3.2.2",
  "seaborn>=0.13.2",
  "joblib>=1.4.2",
  "tqdm>=4.67.1",
  "sympy>=1.13.3",
  "scikit-learn>=1.6.1",
  "numexpr>=2.10.2",
  "numba>=0.61.0",
  "jinja2>=3.1.5",
  "pre-commit>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/DimensionalScoop/metric_spaces"


[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
