[project]
name = "metrica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DimensionalScoop", email = "m@pernklau.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "scipy>=1.15.2",
    "pandas>=2.2.3",
    "uncertainties>=3.2.2",
    "seaborn>=0.13.2",
    "joblib>=1.4.2",
    "tqdm>=4.67.1",
    "sympy>=1.13.3",
    "scikit-learn>=1.6.1",
    "numexpr>=2.10.2",
    "jinja2>=3.1.5",
    "numba>=0.61.0",
    "bpython>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["metrica"]
