[project]
name = "supermetric-pivot-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DimensionalScoop", email = "m@pernklau.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "bpython>=0.25",
    "click>=8.2.1",
    "duckdb>=1.3.0",
    "frozendict>=2.4.6",
    "meters",
    "polars>=1.30.0",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "austin-dist>=3.7.0",
    "austin-tui>=1.3.0",
    "austin-web>=0.3.0",
    "duckdb-engine>=0.17.0",
    "ipython>=9.2.0",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.3.0",
    "jupytext>=1.17.1",
    "line-profiler>=4.2.0",
    "pudb>=2025.1",
    "pyinstrument>=5.0.2",
    "snakeviz>=2.2.2",
]

[tool.uv.sources]
meters = { path = "../../lib", editable = true }
