[project]
name = "supermetric-pivot-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "localpackage @ file://.../lib",
  "numpy",
  "matplotlib",
  "scipy",
  "pandas>=2.2.3",
  "uncertainties>=3.2.2",
  "seaborn>=0.13.2",
  "joblib>=1.4.2",
  "tqdm>=4.67.1",
  "sympy>=1.13.3",
  "scikit-learn>=1.6.1",
  "numexpr>=2.10.2",
  "numba>=0.61.0",
  "jinja2>=3.1.5",
]
